--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -3,7 +3,7 @@
 <ul class="collection">
   <%= for topic <- @topics do %>
     <li class="collection-item">
-      <%= topic.title %>
+      <%= link topic.title, to: topic_path(@conn, :edit, topic) %>
     </li>
   <% end %>
 </ul>
