--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -4,6 +4,7 @@
   <%= for topic <- @topics do %>
     <li class="collection-item">
       <%= link topic.title, to: topic_path(@conn, :edit, topic) %>
+      <%= link '[X]', to: topic_path(@conn, :delete, topic), method: :delete %>
     </li>
   <% end %>
 </ul>
