--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -3,8 +3,12 @@
 <ul class="collection">
   <%= for topic <- @topics do %>
     <li class="collection-item">
-      <%= link topic.title, to: topic_path(@conn, :edit, topic) %>
-      <%= link '[X]', to: topic_path(@conn, :delete, topic), method: :delete %>
+      <%= if @conn.assigns.user.id == topic.user_id do %>
+        <%= link topic.title, to: topic_path(@conn, :edit, topic) %>
+        <%= link '[X]', to: topic_path(@conn, :delete, topic), method: :delete %>
+      <% else %>
+        <%= topic.title %>
+      <% end %>
     </li>
   <% end %>
 </ul>
